Refactor Stock class to replace price retrieval with getLast() method for improved readability